# lucaso.io

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  nginx.conf  pelicanconf.py  project-updater.py  publishconf.py  pyproject.toml
.gitea/workflows/: deploy.yml
content/articles/blog/: blog-1.md  yubikey-sudo-archlinux.md
content/articles/models/: 5-row-mobile-stand.md  elephant-pot.md  fan-holder.md  intel-10g-nic-slot.md  kvm-table-mount.md  macropad.md  model-y.md  model-z.md  nvidia-12-pin-cable-comb.md  prusa-lak-spool-holder.md  raspberry-pi-cluster.md  valve-index-lense-holder.md
content/articles/projects/: android-draw.md  kano-smartwand-async.md  keyboard-review.md  macropad-os.md  pi-calendar-sign.md  pi-cluster.md  pi-mta-sign.md  python-audio-recorder.md  tensordex.md
content/models/: model-y.md
content/pages/: 1-about.md  2-blog.md  2-projects.md  3-models.md  4-blog.md  4-resume.md  404.md  500.md
content/pages/blog/: 4-blog.md
content/projects/: keyboard-review.md
helm/: deploy.values.yaml
helm/chaosdev-site/: .helmignore  Chart.yaml  values.yaml
helm/chaosdev-site/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/chaosdev-site/templates/tests/: test-connection.yaml
pelican-hyde/static/css/: hyde.css  models.css  poole.css
pelican-hyde/static/js/: fun-background.js
pelican-hyde/templates/: article.html  base.html  model-list.html
pelican-hyde/templates/fragments/: giscus.html
