[tool.poetry]
name = "lucasoskorep.com"
version = "0.1.0"
description = "My personal website"
authors = ["Lucas Oskorep <lucas.oskorep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.9.1"}
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
