[tool.poetry]
name = "lucaso.io"
version = "0.2.0"
description = "Lucas Oskorep's Personal Website"
authors = ["Lucas Oskorep <lucas.oskorep@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "*"
pelican-hyde = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
